fix: adding spacings

--- a/projects/angular/src/popover/tooltip/_properties.tooltip.scss
+++ b/projects/angular/src/popover/tooltip/_properties.tooltip.scss
@@ -5,6 +5,7 @@
  */
 @use '../../utils/mixins';
 @use '../../utils/variables/variables.global';
+@use 'variables.tooltip' as tooltip-variables;
 
 @include mixins.exports('tooltip.properties') {
   @if variables.$clr-use-custom-properties == true {
@@ -16,6 +17,12 @@
       --clr-tooltip-font-weight: var(--clr-p3-font-weight);
       --clr-tooltip-content-padding: #{variables.$clr_baselineRem_0_375 variables.$clr_baselineRem_0_5};
       --clr-tooltip-content-line-height: #{variables.$clr_baselineRem_0_75};
+      --clr-tooltip-content-margin: #{tooltip-variables.$clr-tooltip-adjusted-margin};
+
+      --clr-tooltip-tip-width: #{tooltip-variables.$arrow-width};
+      --clr-tooltip-tip-height: #{tooltip-variables.$arrow-height};
+      --clr-tooltip-tip-horizontal-size: #{-1 * variables.$clr_baselineRem_0_375};
+      --clr-tooltip-tip-vertical-size: #{-1 * variables.$clr_baselineRem_0_35};
     }
   }
 }
