--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -641,11 +641,17 @@
   /* Tooltips */
 
   --clr-tooltip-background-color: var(--cds-alias-object-interaction-color-active);
-  --clr-tooltip-color: var(--cds-alias-typography-color-100);
+  --clr-tooltip-color: var(--cds-alias-typography-color-100, var(--cds-global-typography-color-100));
   --clr-tooltip-border-radius: var(--cds-alias-object-border-radius-100);
   --clr-tooltip-font-weight: var(--cds-global-typography-body-font-weight);
+  --clr-tooltip-content-margin: var(--cds-global-space-9);
   --clr-tooltip-content-padding: var(--cds-global-space-6);
   --clr-tooltip-content-line-height: var(--cds-global-space-7);
+
+  --clr-tooltip-tip-width: var(--cds-global-space-5);
+  --clr-tooltip-tip-height: var(--cds-global-space-5);
+  --clr-tooltip-tip-horizontal-size: calc(-1 * var(--cds-global-space-6));
+  --clr-tooltip-tip-vertical-size: calc(-1 * var(--cds-global-space-6));
 
   /* Wizard */
 
